# readability

./: .gitignore  Cargo.toml
src/: dom.rs  extractor.rs  lib.rs  markup5ever_arcdom.rs  markup5ever_rcdom.rs  scorer.rs
tests/: lib.rs
