[package]
name = "readability"
version = "0.2.2"
authors = ["Hiroki Kumamoto <kumabook@live.jp>"]
license = "MIT"
homepage = "https://github.com/kumabook/readability"
repository = "https://github.com/kumabook/readability.git"
description = "Port of arc90's readability project to rust"
keywords = ["readability"]
categories = []

[dependencies]
regex = "1"
url = "2"
html5ever = "0.28"
lazy_static = "1"
tendril = "0.4"
markup5ever = "0.13"
xml5ever = "0.19"

[dependencies.reqwest]
version = "0.12"
optional = true
features = ["blocking", "rustls-tls"]
default-features = false
